# Salieri

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run  run.bat
Salieri/: CMakeLists.txt
Salieri/include/Salieri/: exceptions.hpp  file.hpp  object.hpp  salieri.hpp
Salieri/include/Salieri/BinarySaveLoad/: containers.hpp  context.hpp  fwd.hpp  generic.hpp  primitives.hpp
Salieri/include/Salieri/BinarySaveLoad/Extensions/: pointer.hpp
Salieri/include/Salieri/Cout/: coutContext.hpp  primitives.hpp
Salieri/include/Salieri/Displayer/: displayer.hpp  primitives.hpp
Salieri/include/Salieri/FileContext/: binaryFileAccess.hpp  generic.hpp  primitives.hpp  saveLoadFile.hpp
Salieri/include/Salieri/Imgui/: imguiContext.hpp
Salieri/include/Salieri/Inspector/std/: array.hpp  vector.hpp
Salieri/include/Salieri/JsonSaveLoad/: context.hpp  fwd.hpp  generic.hpp  jsonReadOnly.hpp  primitives.hpp
Salieri/include/Salieri/JsonSaveLoad/Extensions/: pointer.hpp
Salieri/include/Salieri/std/: array.hpp  primitives.hpp  vector.hpp
Salieri/src/BinarySaveLoad/: context.cpp
Salieri/src/BinarySaveLoad/Extensions/: pointer.cpp
Salieri/src/FileContext/: saveLoadFile.cpp
Salieri/src/JsonSaveLoad/: context.cpp
Salieri/src/JsonSaveLoad/Extensions/: pointer.cpp
SalieriTest/: CMakeLists.txt
SalieriTest/src/: main.cpp
